<resources>
    <string name="app_name">Dog Life</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dog Barbos</string>
    <string name="nav_header_subtitle">Mongrel common</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="maps">Maps</string>
    <string name="setings">Setings</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="todo">TODO</string>
    <string name="dog3">dog3</string>
    <string name="vok">Vok</string>
    <string name="dempf">Dempf</string>
    <string name="wet">Wet</string>
    <string name="statistic">Statistic</string>
    <string name="food">Food</string>
    <string name="foto">Foto</string>
</resources>