<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/Calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/Maps"
            android:title="@string/maps" />
        <item
            android:id="@+id/Setings"
            android:title="@string/setings" />
        <item
            android:id="@+id/Help"
            android:title="@string/help" />
        <item
            android:id="@+id/About_us"
            android:title="@string/about_us" />
    </group>
</menu>