<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/bone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_bone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="29dp"
        android:text="@string/food"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/foto"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvStat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bone"
        app:layout_constraintTop_toBottomOf="@+id/tvFood" />

    <TextView
        android:id="@+id/tvStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="265dp"
        android:text="@string/statistic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvDempf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bone"
        app:layout_constraintTop_toBottomOf="@+id/tvFoto" />

    <TextView
        android:id="@+id/tvDempf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="688dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="24dp"
        android:text="@string/dempf"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVok"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="25dp"
        android:text="@string/wet"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvVok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bone" />

    <TextView
        android:id="@+id/tvVok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="25dp"
        android:text="@string/vok"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvDempf"
        app:layout_constraintStart_toEndOf="@+id/tvWet"
        app:layout_constraintTop_toBottomOf="@+id/bone" />
</androidx.constraintlayout.widget.ConstraintLayout>